adjusted to java 8 syntax